--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -20,6 +20,13 @@ jobs:
     - name: Build Reason
       run: "echo ref: ${{github.ref}} event: ${{github.event_name}}"
       
+    - name: Build Version
+      shell: bash
+      run: |
+        dotnet tool install --global minver-cli --version 4.3.0
+        version=$(minver --tag-prefix v)
+        echo "MINVERVERSIONOVERRIDE=$version" >> $GITHUB_ENV
+      
     - name: Build
       run: dotnet build --configuration Release AspectCore-Framework.sln
       
@@ -29,3 +36,25 @@ jobs:
     - name: Package
       if: github.event_name != 'pull_request'
       run: dotnet pack --configuration Release --no-build AspectCore-Framework.sln
+
+    - name: Install GitHub Package Tool
+      if: github.event_name != 'pull_request'
+      run: dotnet tool install gpr -g
+    - name: Publish CI Packages
+      shell: bash
+      if: github.event_name != 'pull_request'
+      run: |
+        for package in $(find -name "*.nupkg" | grep "minver" -v); do
+          echo "${0##*/}": Pushing $package...
+
+          # GitHub
+          gpr push $package -k ${{ secrets.GITHUB_TOKEN }} || true
+        done
+    - name: Publish Release Packages
+      shell: bash
+      if: startsWith(github.ref, 'refs/tags/v')
+      run: |
+        for package in $(find -name "*.nupkg" | grep "minver" -v); do
+          echo "${0##*/}": Pushing $package...
+          dotnet nuget push $package --source https://www.myget.org/F/aspectcore/api/v2/package --api-key jpjXYvzq6XOX2E5PnhKPRBK/DKVoZAQ6Ok1UmWI3BuWq6rdtrGJMUJem/GtR8+qG --skip-duplicate
+        done
