--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -21,40 +21,58 @@ jobs:
       run: "echo ref: ${{github.ref}} event: ${{github.event_name}}"
       
     - name: Build Version
-      shell: bash
+      shell: pwsh
       run: |
-        dotnet tool install --global minver-cli --version 4.3.0
-        version=$(minver --tag-prefix v)
-        echo "MINVERVERSIONOVERRIDE=$version" >> $GITHUB_ENV
+        $versionPropsPath = "./build/version.props"
+        [xml]$versionProps = Get-Content $versionPropsPath
+        $versionMajor = $versionProps.Project.PropertyGroup.VersionMajor
+        $versionMinor = $versionProps.Project.PropertyGroup.VersionMinor
+        $versionPatch = $versionProps.Project.PropertyGroup.VersionPatch
+        $versionQuality = $versionProps.Project.PropertyGroup.VersionQuality
+        $versionPrefix = "$versionMajor.$versionMinor.$versionPatch"
+        
+        if (-not [string]::IsNullOrWhiteSpace($versionQuality)) {
+          $versionPrefix = "$versionPrefix.$versionQuality"
+        }
+        
+        echo "Full Version: $versionPrefix"
+        Add-Content -Path $Env:GITHUB_ENV -Value "FULL_VERSION=$versionPrefix"
       
     - name: Build
-      run: dotnet build --configuration Release AspectCore-Framework.sln
+      shell: bash
+      run: |
+        for project in $(find ./src -name "*.csproj"); do
+          dotnet build --configuration Release $project -p:Version=${{ env.FULL_VERSION }}
+        done
       
     - name: Run Tests
-      run: dotnet test --configuration Release --no-build AspectCore-Framework.sln
+      shell: bash
+      run: |
+        for project in $(find ./tests -name "*.csproj"); do
+          dotnet test --configuration Release $project
+        done
       
     - name: Package
+      shell: bash
       if: github.event_name != 'pull_request'
-      run: dotnet pack --configuration Release --no-build AspectCore-Framework.sln
+      run: |
+        for project in $(find ./src -name "*.csproj"); do
+          dotnet pack --configuration Release --no-build $project -p:PackageVersion=${{ env.FULL_VERSION }} -p:SymbolPackageFormat=snupkg --include-source --output ./artifacts/packages
+        done
 
     - name: Install GitHub Package Tool
       if: github.event_name != 'pull_request'
       run: dotnet tool install gpr -g
+      
     - name: Publish CI Packages
       shell: bash
       if: github.event_name != 'pull_request'
       run: |
-        for package in $(find -name "*.nupkg" | grep "minver" -v); do
-          echo "${0##*/}": Pushing $package...
+        for package in $(find ./artifacts/packages/ -name "*.nupkg" -o -name "*.snupkg"); do
+          echo "$package": Pushing $package...
 
           # GitHub
           gpr push $package -k ${{ secrets.GITHUB_TOKEN }} || true
-        done
-    - name: Publish Release Packages
-      shell: bash
-      if: startsWith(github.ref, 'refs/tags/v')
-      run: |
-        for package in $(find -name "*.nupkg" | grep "minver" -v); do
-          echo "${0##*/}": Pushing $package...
+          # myget
           dotnet nuget push $package --source https://www.myget.org/F/aspectcore/api/v2/package --api-key jpjXYvzq6XOX2E5PnhKPRBK/DKVoZAQ6Ok1UmWI3BuWq6rdtrGJMUJem/GtR8+qG --skip-duplicate
         done
