--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -78,7 +78,13 @@ jobs:
           echo "$package": Pushing $package...
 
           # GitHub
-          gpr push $package -k ${{ secrets.GITHUB_TOKEN }} || true
+          echo "Pushing to GitHub Package Registry..."
+          gpr push "$package" -k ${{ secrets.GITHUB_TOKEN }} || echo "Skipping: Package push failed or already exists."
+          
           # myget
-          dotnet nuget push $package --source https://www.myget.org/F/aspectcore/api/v2/package --api-key jpjXYvzq6XOX2E5PnhKPRBK/DKVoZAQ6Ok1UmWI3BuWq6rdtrGJMUJem/GtR8+qG --skip-duplicate
+          echo "Pushing to MyGet..."
+          dotnet nuget push "$package" \
+            --source "https://www.myget.org/F/aspectcore/api/v2/package" \
+            --api-key "jpjXYvzq6XOX2E5PnhKPRBK/DKVoZAQ6Ok1UmWI3BuWq6rdtrGJMUJem/GtR8+qG" \
+            --skip-duplicate || echo "Skipping: Package push failed or already exists."
         done
